package com.orbanszlrd.quizapi.modules.user.model;

public enum Role {
    OWNER,
    ADMIN,
    USER
}
